--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 149.202.82.172, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇬🇧 英国-805.2KB/s(Youtube:不良林), server: 172.99.190.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇫🇷 法国-1.01MB/s(Youtube:不良林), server: 145.239.1.100, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.64.138.145, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇬🇧 英国-1.10MB/s(Youtube:不良林), server: 172.99.190.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 保加利亚-662.4KB/s(Youtube:不良林), server: 213.183.63.221, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇫🇷 法国-326.2KB/s(Youtube:不良林), server: 145.239.1.100, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-1.57MB/s(Youtube:不良林), server: 145.239.1.100, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-805.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-326.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
