--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-662.4KB/s(Youtube:不良林), server: 213.183.63.221, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇫🇷 法国-2.89MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇬🇧 英国-464.5KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.114.114.67, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.82MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 213.183.53.208, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
   - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-535.1KB/s(Youtube:不良林), server: 145.239.1.100, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 172.99.190.39, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-177.8KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1016.9KB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-662.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-535.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
