--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-464.5KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.114.114.67, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.82MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 213.183.53.208, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.114.114.69, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-1.58MB/s(Youtube:不良林), server: 145.239.1.100, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-209.0KB/s(Youtube:不良林), server: 145.239.1.100, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.61MB/s(Youtube:不良林), server: 145.239.1.100, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇬🇧 英国-1.03MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 172.99.190.39, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-177.8KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1016.9KB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
