--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.114.114.69, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-1.58MB/s(Youtube:不良林), server: 145.239.1.100, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-1.15MB/s(Youtube:不良林), server: 145.239.1.100, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇬🇧 英国-464.5KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-742.0KB/s(Youtube:不良林), server: 172.99.190.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇫🇷 法国-209.0KB/s(Youtube:不良林), server: 145.239.1.100, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-1.61MB/s(Youtube:不良林), server: 145.239.1.100, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇬🇧 英国-1.03MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 172.99.190.39, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-177.8KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-464.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-742.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇫🇷 法国-209.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
